# RayTracerV2

./: .gitignore  CMakeLists.txt  README.md  REFACTORING.md  imgui.ini
RayTracing/: imgui.ini
RayTracing/src/: App.cpp  Renderer.cpp  Renderer.h  Scene.h
lib/: CMakeLists.txt
src/RayTracer/: App.cpp  CMakeLists.txt  Main.cpp  Mesh.cpp  Model.cpp  Shader.cpp
src/RayTracer/include/RayTracer/: App.h  Mesh.h  Model.h  Shader.h
src/RayTracerLib/: BaseApp.cpp  CMakeLists.txt
src/RayTracerLib/include/RayTracerLib/: BaseApp.hpp
